# t5-data

./: README.md  pyproject.toml
bilbomd/: bilbomd_release.py
common/: pyproject.toml
common/t5_common/: utils.py
common/t5_common/jira/: check_jira.py  jira.py
common/t5_common/jira/workflow/: database.py  steps.py
jamo/: README.md
jamo/config/: analysis.config  lapinpy.config  tape.config
jamo/config/macros/: viral_protein.yaml
jamo/docker/: Dockerfile  get_code.sh  init_and_run.sh
jamo/dt_service/: crontab.dtn.sh  crontab.jgi_dna.dtn03.sh  run_dt_service_nersc_prod.sh  run_dt_service_perlmutter_prod.sh  scrontab.jgi_dna.perlmutter.sh  scrontab.perlmutter.sh
jamo/k8s/deployments/: jamo-app.yaml
scripts/jira/: poll_jira.py
src/t5_common/: jira.py  utils.py
t5_common/: pyproject.toml
t5_common/src/t5_common/: jira.py
