[project]
name = "t5_common"
version = "0.1.0"
description = "A library for common routines needed for Taskforce5 code"
readme = "README.md"  # Path to your README file
requires-python = ">=3.7"
license = { text = "Modified BSD" }  # Specify your license here
authors = [
    { name = "Andrew Tritt", email = "ajtritt@lbl.gov" }
]
keywords = ["t5", "common", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.scripts]
check-jira = "t5_common.jira.check_jira:main"
init-db = "t5_common.jira.workflow.database:init_db"
finish-job = "t5_common.jira.workflow.steps:finish_job"
publish-job = "t5_common.jira.workflow.steps:publish_job"
